[gd_scene load_steps=12 format=3 uid="uid://dwaxenqde6n6y"]

[ext_resource type="Script" path="res://scripts/characters/ranged_enemy/ranged_enemy.gd" id="1_dg3f2"]
[ext_resource type="PackedScene" uid="uid://cwi7l5pb4w74k" path="res://scenes/characters/ranged_enemy/projectile.tscn" id="2_qt8wf"]
[ext_resource type="Script" path="res://scripts/characters/HpBar.gd" id="2_vvwnb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jx3wm"]
radius = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jfshl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2bedf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_c22be"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ocmc4"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("SubViewport/HpBar:value")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_y7mh0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6btbb"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxypm"]
bg_color = Color(0.471704, 0.569977, 0.959633, 1)

[node name="RangedEnemy" type="CharacterBody3D" groups=["Enemies"]]
script = ExtResource("1_dg3f2")
projectile_scene = ExtResource("2_qt8wf")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0)
shape = SubResource("SphereShape3D_jx3wm")

[node name="Node3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
mesh = SubResource("CapsuleMesh_jfshl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2bedf")

[node name="EnemyHitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyHitbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
shape = SubResource("BoxShape3D_c22be")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ocmc4")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 1.09517, 0)
billboard = 1
texture = SubResource("ViewportTexture_y7mh0")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="HpBar" type="ProgressBar" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6btbb")
theme_override_styles/fill = SubResource("StyleBoxFlat_hxypm")
value = 100.0
show_percentage = false
script = ExtResource("2_vvwnb")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="value_changed" from="SubViewport/HpBar" to="SubViewport/HpBar" method="_on_value_changed"]
